Fix: Card Overlapping Bug

--- a/src/Pages/AccountPage/AccountPage.css
+++ b/src/Pages/AccountPage/AccountPage.css
@@ -58,12 +58,19 @@
     margin-bottom: 2rem;
 }
 
+@media screen and (max-width : 1420px){
+    .profile-container{
+        width: 40vw;
+    }
+}
+
 @media screen and (max-width : 1024px){
     .account-settings{
         flex-direction: column;
     }
 
     .profile-container{
+        width: 600px;
         margin: 0 auto 2rem;
     }
 }
